# dl-project

./: .gitignore  .pre-commit-config.yaml  README.md  clean.sh  flake.nix  pyproject.toml  setup_dataset.sh
docs/: blackboard-description.md
src/: dataset_loader.py  downsampling.py  main.py  trainer.py  utils.py
src/model/: EEGNet.py  cnn.py  cnn_1d.py  cnn_attention.py  example.py  lstm.py  rnn.py  tcn.py
src/preprocessing/: __init__.py  minMaxScaling.py
