[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
h5py = "^3.10.0"
scikit-learn = "^1.3.2"

[tool.poetry.scripts]
main="src.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
